@@ -5,6 +5,7 @@ Revision history for Perl application Lstu
 	  deleted shortened URL)
 	- Slugify custom URLs and add a suffix (-2, -3…) if the custom URL is
 	  already taken
+	- Allow to search several IP addresses at once
 
 0.21-4 2018-12-17
 	- Add a lockfile to GSB database update to prevent concurrent updates
